--- a/register.html
+++ b/register.html
@@ -21,7 +21,7 @@
                 <input type="text" id="firstName" name="firstName" required>
 
                 <!-- Rest of the form inputs -->
-              
+              <!--start the code form here in new way -->
 
                 <label for="dob">Date of Birth:</label>
                 <input type="date" id="dob" name="dob" required>
